Modify: remove test styling for collapse element, because no longer using collapse element

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,6 @@
-
-
-
-
+/* .collapse-title {
+  padding: 5px;
+} */
 
 /* --- Original Container Styles Clifton Used--- */
 .hero-container {
